SDHR-Guard/src/importScript/generated/Python2Parser.js
// Generated from Python2.g4 by ANTLR 4.9.3
// jshint ignore: start
import * as antlr4 from 'antlr4';
import Python2Listener from './Python2Listener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class Python2Parser extends antlr4.Parser {

    static grammarFileName = "Python2.g4";
    static literalNames = [ null, "'@'", "'def'", "':'", "'='", "','", "'*'", 
                            "'**'", "';'", "'+='", "'-='", "'*='", "'/='", 
                            "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
                            "'**='", "'//='", "'>>'", "'del'", "'pass'", 
                            "'break'", "'continue'", "'return'", "'raise'", 
                            "'import'", "'from'", "'.'", "'as'", "'global'", 
                            "'exec'", "'in'", "'assert'", "'if'", "'elif'", 
                            "'else'", "'while'", "'for'", "'try'", "'finally'", 
                            "'with'", "'except'", "'lambda'", "'or'", "'and'", 
                            "'not'", "'<'", "'>'", "'=='", "'>='", "'<='", 
                            "'<>'", "'!='", "'is'", "'|'", "'^'", "'&'", 
                            "'<<'", "'+'", "'-'", "'/'", "'%'", "'//'", 
                            "'~'", "'`'", "'class'", "'yield'", null, null, 
                            null, null, null, null, "'('", "')'", "'{'", 
                            "'}'", "'['", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "NAME", 
                             "NUMBER", "STRING", "LINENDING", "WHITESPACE", 
                             "COMMENT", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", 
                             "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
                             "UNKNOWN", "INDENT", "DEDENT", "NEWLINE", "ENDMARKER" ];
    static ruleNames = [ "single_input", "file_input", "eval_input", "decorator", 
                         "decorators", "decorated", "funcdef", "parameters", 
                         "varargslist", "fpdef", "fplist", "stmt", "simple_stmt", 
                         "small_stmt", "expr_stmt", "augassign", "print_stmt", 
                         "del_stmt", "pass_stmt", "flow_stmt", "break_stmt", 
                         "continue_stmt", "return_stmt", "yield_stmt", "raise_stmt", 
                         "import_stmt", "import_name", "import_from", "import_as_name", 
                         "dotted_as_name", "import_as_names", "dotted_as_names", 
                         "dotted_name", "global_stmt", "exec_stmt", "assert_stmt", 
                         "compound_stmt", "if_stmt", "while_stmt", "for_stmt", 
                         "try_stmt", "with_stmt", "with_item", "except_clause", 
                         "suite", "testlist_safe", "old_test", "old_lambdef", 
                         "test", "or_test", "and_test", "not_test", "comparison", 
                         "comp_op", "expr", "xor_expr", "and_expr", "shift_expr", 
                         "arith_expr", "term", "factor", "power", "atom", 
                         "listmaker", "testlist_comp", "lambdef", "trailer", 
                         "subscriptlist", "subscript", "sliceop", "exprlist", 
                         "testlist", "dictorsetmaker", "classdef", "arglist", 
                         "argument", "list_iter", "list_for", "list_if", 
                         "comp_iter", "comp_for", "comp_if", "testlist1", 
                         "encoding_decl", "yield_expr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = Python2Parser.ruleNames;
        this.literalNames = Python2Parser.literalNames;
        this.symbolicNames = Python2Parser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 16:
    	    		return this.print_stmt_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    print_stmt_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this._input.LT(1).text=='print';
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	single_input() {
	    let localctx = new Single_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, Python2Parser.RULE_single_input);
	    try {
	        this.state = 175;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 170;
	            this.match(Python2Parser.NEWLINE);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 171;
	            this.simple_stmt();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 172;
	            this.compound_stmt();
	            this.state = 173;
	            this.match(Python2Parser.NEWLINE);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	file_input() {
	    let localctx = new File_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, Python2Parser.RULE_file_input);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 179;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 177;
	                    this.match(Python2Parser.NEWLINE);
	                    break;

	                case 2:
	                    this.state = 178;
	                    this.stmt();
	                    break;

	                } 
	            }
	            this.state = 183;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	        this.state = 184;
	        this.match(Python2Parser.ENDMARKER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	eval_input() {
	    let localctx = new Eval_inputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, Python2Parser.RULE_eval_input);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.testlist();
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===Python2Parser.NEWLINE) {
	            this.state = 187;
	            this.match(Python2Parser.NEWLINE);
	            this.state = 192;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 193;
	        this.match(Python2Parser.ENDMARKER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorator() {
	    let localctx = new DecoratorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, Python2Parser.RULE_decorator);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 195;
	        this.match(Python2Parser.T__0);
	        this.state = 196;
	        this.dotted_name();
	        this.state = 202;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===Python2Parser.OPEN_PAREN) {
	            this.state = 197;
	            this.match(Python2Parser.OPEN_PAREN);
	            this.state = 199;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << Python2Parser.T__5) | (1 << Python2Parser.T__6) | (1 << Python2Parser.T__29))) !== 0) || ((((_la - 45)) & ~0x1f) == 0 && ((1 << (_la - 45)) & ((1 << (Python2Parser.T__44 - 45)) | (1 << (Python2Parser.T__47 - 45)) | (1 << (Python2Parser.T__60 - 45)) | (1 << (Python2Parser.T__61 - 45)) | (1 << (Python2Parser.T__65 - 45)) | (1 << (Python2Parser.T__66 - 45)) | (1 << (Python2Parser.NAME - 45)) | (1 << (Python2Parser.NUMBER - 45)) | (1 << (Python2Parser.STRING - 45)) | (1 << (Python2Parser.OPEN_PAREN - 45)))) !== 0) || _la===Python2Parser.OPEN_BRACE || _la===Python2Parser.OPEN_BRACKET) {
	                this.state = 198;
	                this.arglist();
	            }

	            this.state = 201;
	            this.match(Python2Parser.CLOSE_PAREN);
	        }

	        this.state = 204;
	        this.match(Python2Parser.NEWLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorators() {
	    let localctx = new DecoratorsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, Python2Parser.RULE_decorators);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 206;
	            this.decorator();
	            this.state = 209; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===Python2Parser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decorated() {
	    let localctx = new DecoratedContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, Python2Parser.RULE_decorated);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 211;
	        this.decorators();
	        this.state = 214;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case Python2Parser.T__67:
	            this.state = 212;
	            this.classdef();
	            break;
	        case Python2Parser.T__1:
	            this.state = 213;
	            this.funcdef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcdef() {
	    let localctx = new FuncdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, Python2Parser.RULE_funcdef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 216;
	        this.match(Python2Parser.T__1);
	        this.state = 217;
	        this.match(Python2Parser.NAME);
	        this.state = 218;
	        this.parameters();
	        this.state = 219;
	        this.match(Python2Parser.T__2);
	        this.state = 220;
	        this.suite();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameters() {
	    let localctx = new ParametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, Python2Parser.RULE_parameters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 222;
	        this.match(Python2Parser.OPEN_PAREN);
	        this.state = 224;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===Python2Parser.T__5 || _la===Python2Parser.T__6 || _la===Python2Parser.NAME || _la===Python2Parser.OPEN_PAREN) {
	            this.state = 223;
	            this.varargslist();
	        }

	        this.state = 226;
	        this.match(Python2Parser.CLOSE_PAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varargslist() {
	    let localctx = new VarargslistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, Python2Parser.RULE_varargslist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 270;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 237;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===Python2Parser.NAME || _la===Python2Parser.OPEN_PAREN) {
	                this.state = 228;
	                this.fpdef();
	                this.state = 231;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===Python2Parser.T__3) {
	                    this.state = 229;
	                    this.match(Python2Parser.T__3);
	                    this.state = 230;
	                    this.test();
	                }

	                this.state = 233;
	                this.match(Python2Parser.T__4);
	                this.state = 239;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 249;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case Python2Parser.T__5:
	                this.state = 240;
	                this.match(Python2Parser.T__5);
	                this.state = 241;
	                this.match(Python2Parser.NAME);
	                this.state = 245;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===Python2Parser.T__4) {
	                    this.state = 242;
	                    this.match(Python2Parser.T__4);
	                    this.state = 243;
	                    this.match(Python2Parser.T__6);
	                    this.state = 244;
	                    this.match(Python2Parser.NAME);
	                }

	                break;
	            case Python2Parser.T__6:
	                this.state = 247;
	                this.match(Python2Parser.T__6);
	                this.state = 248;
	                this.match(Python2Parser.NAME);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;

	        case 2:
	            this.state = 251;
	            this.fpdef();
	            this.state = 254;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===Python2Parser.T__3) {
	                this.state = 252;
	                this.match(Python2Parser.T__3);
	                this.state = 253;
	                this.test();
	            }

	            this.state = 264;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 256;
	                    this.match(Python2Parser.T__4);
	                    this.state = 257;
	                    this.fpdef();
	                    this.state = 260;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if(_la===Python2Parser.T__3) {
	                        this.state = 258;
	                        this.match(Python2Parser.T__3);
	                        this.state = 259;
	                        this.test();
	                    }
	             
	                }
	                this.state = 266;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	            }

	            this.state = 268;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===Python2Parser.T__4) {
	                this.state = 267;
	                this.match(Python2Parser.T__4);
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fpdef() {
	    let localctx = new FpdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, Python2Parser.RULE_fpdef);
	    try {
	        this.state = 277;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case Python2Parser.NAME:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 272;
	            this.match(Python2Parser.NAME);
	            break;
	        case Python2Parser.OPEN_PAREN:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 273;
	            this.match(Python2Parser.OPEN_PAREN);
	            this.state = 274;
	            this.fplist();
	            this.state = 275;
	            this.match(Python2Parser.CLOSE_PAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fplist() {
	    let localctx = new FplistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, Python2Parser.RULE_fplist);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 279;
	        this.fpdef();
	        this.state = 284;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 280;
	                this.match(Python2Parser.T__4);
	                this.state = 281;
	                this.fpdef(); 
	            }
	            this.state = 286;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	        }

	        this.state = 288;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===Python2Parser.T__4) {
	            this.state = 287;
	            this.match(Python2Parser.T__4);
	        }

